# SmartPaper-Ai

./: .gitignore  Dockerfile  README.md  app.py  config.py  main.py  pyproject.toml  requirements.txt  test_pipeline.py
agents/: graph.py  nodes.py
embeddings/: embedder.py  retriever.py
models/: finetuned_reader.py
parsers/: pdf_parser.py
static/css/: style.css
static/js/: main.js
templates/: index.html
