[project]
name = "ats-freindly-resume-maker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.5.9",
    "dataset>=2.0.0",
    "faiss-cpu>=1.14.2",
    "flask>=3.1.3",
    "fpdf2>=2.8.7",
    "groq>=0.37.1",
    "gunicorn>=26.0.0",
    "langchain>=1.3.4",
    "langchain-astradb>=1.0.0",
    "langchain-classic>=1.0.7",
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.1",
    "langchain-experimental>=0.4.2",
    "langchain-google-genai>=4.2.5",
    "langchain-groq>=1.1.2",
    "langchain-huggingface>=1.2.2",
    "langchain-ollama>=1.1.0",
    "langchain-openrouter>=0.2.3",
    "langgraph>=1.2.4",
    "lxml>=6.1.1",
    "pdfminer-six>=20260107",
    "pillow>=12.2.0",
    "pymupdf>=1.27.2.3",
    "pypdf>=6.13.2",
    "pytesseract>=0.3.13",
    "python-dotenv>=1.2.2",
    "sentence-transformers>=5.5.1",
    "sqlalchemy>=2.0.50",
    "streamlit>=1.58.0",
    "tavily-python>=0.7.25",
    "unsloth>=2026.6.7",
    "unstructured-inference>=1.6.12",
    "unstructured-pytesseract>=0.3.15",
    "unstructured[all-docs,pptx]>=0.23.0",
]
